@@ -143,6 +143,10 @@ Release 2.8.0 - UNRELEASED
     HDFS-8939. Test(S)WebHdfsFileContextMainOperations failing on branch-2.
     (Chris Nauroth via jghoman)
 
+    HDFS-9128. TestWebHdfsFileContextMainOperations and
+    TestSWebHdfsFileContextMainOperations fail due to invalid HDFS path on
+    Windows. (cnauroth)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
